feat: apk extract feature & double back to exit (#17)
* feat: apk extract feature

* fix cli build

* Refactor

Move zipping logic to native channel to prevent OOM on large APKs

Previous approach read entire files into memory before archiving, causing excessive memory usage and instability.  That used to freeze entire main UI as well, meh.

* remove unused import

* achieve output similar to MT

* implement pull to refresh & menu items

* refresh app list on uninstallation

* localize strings

* add signature scheme to app details

* feat: implement signature info

* small fix :)

* installer info & pkg on stores

* fool me

* implement double back to exit

also fix batteryoptimisation locals msg

* locales

* shift installer fetch before store

* fix: snackbar shown when drawer opened

* missing locals

* small fix-ups

* improve appstore check

* return F-droid for termux packages

* typo IzzyOnDroid

--- a/lib/l10n/app_af.arb
+++ b/lib/l10n/app_af.arb
@@ -5,11 +5,29 @@
   "analyzing": "Analyzing...",
   "apiKey": "API Key",
   "apiRateLimits": "API Endpoints Rate Limits",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "APKS to APK",
   "appDescription": "A collection of reverse engineering tools.",
   "appTitle": "RevEngi",
+  "availableIn": "Available in",
   "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "batteryOptimizationMessage": "For Android 11 and above, We need to disable battery optimization for this app to work properly in the background.",
   "blutter": "Blutter",
   "blutterDesc": "Flutter binary analysis tool",
   "blutterNote": "\nAPK: The app will directly handle APK files.\n\r\nZIP: Ensure ZIP files contain only the `libapp.so` for arm64 architecture. Failure to comply may result in errors.",
@@ -30,6 +48,9 @@
   "continueAsGuest": "Continue as Guest",
   "copiedToClipboard": "Copied to clipboard",
   "createAccount": "Create Account",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "Developer",
   "dexRepair": "Dex Repair",
   "dexRepairDesc": "Repair DEX files",
@@ -44,6 +65,9 @@
   "enterPassword": "Please enter password",
   "enterUsername": "Please enter username",
   "errorDuringAnalysis": "An error occurred during analysis",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Failed to extract files from ZIP: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "Please use the desktop or mobile app for this feature.",
   "fetchingModelInfo": "Fetching model info...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "Flutter Analysis",
   "flutterAnalysisDesc": "Analyze Flutter libs",
   "generate": "Generate",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "Guest users cannot use this feature",
   "iDonTLoveThisApp": "I don't care, I'll regret",
   "iLoveThisApp": "I'm sorry, I love this app",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "JNI Analysis",
   "jniAnalysisDesc": "Find JNI signatures in APK",
   "language": "Language: {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "Large Model Warning",
+  "lastUpdate": "Last update",
   "later": "Later",
+  "launch": "Launch",
   "licenses": "Licenses",
   "login": "Login",
   "mail": "Mail",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "Merge",
   "mergeSplitApks": "Merge Split APKs",
   "mergeUnsupportedOnWeb": "Split APK merging is not possible in the web version.",
   "models": "Models",
+  "more": "More",
   "mtHook": "MT Hook",
   "mtHookDesc": "Generate MT Enhanced Hooks",
+  "noAppsFound": "No apps found",
   "noFileSelected": "No file selected",
+  "notFound": "Not Found",
   "ok": "Ok",
   "ollama_api_url": "OLLAMA base URL",
   "ollamaInitializeError": "Failed to initialize Ollama client: {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "Open Ollama Library",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "Password must be at least 8 characters",
   "passMisMatch": "Passwords do not match",
   "password": "Password",
   "pathToApkeditorJar": "Path to apkeditor jar",
   "pleaseConfirmPassword": "Please confirm password",
+  "pleaseWait": "Please wait...",
   "preferences": "Preferences",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Proceed",
   "profile": "Profile",
   "register": "Register",
@@ -133,6 +180,7 @@
   "repairing": "Repairing...",
   "reset": "Reset",
   "save": "Save",
+  "searchApps": "Search apps...",
   "selectAModel": "Select a model to chat",
   "selectFiles": "Select {type} File",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "System Message",
   "theme": "Theme",
   "typeMessage": "Type your message…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "You were just about to uninstall the app weren't you?",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "Currently RevEngi only supports dart stable channel\n\nCurrent Dart Version: {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "Username can only contain letters, numbers, and underscore",
   "usernameLimit": "Username must be between 5 and 15 characters",
   "validateModules": "Validate version of base.apk with split APKs",
+  "versionCode": "Version code",
   "vrd": "Validate resources dir name",
   "welcomeBack": "Welcome Back!"
 }
