--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -5,11 +5,29 @@
   "analyzing": "تحليل...",
   "apiKey": "مفتاح API",
   "apiRateLimits": "حدود معدل نقاط نهاية API",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "مجمع APKS",
   "appDescription": "مجموعة من أدوات الهندسة العكسية.",
   "appTitle": "Revengi",
+  "availableIn": "Available in",
   "batteryOptimization": "تحسين البطارية",
-  "batteryOptimizationMessage": "بالنسبة إلى Android 13 وما فوق ، نحتاج إلى تعطيل تحسين البطارية لهذا التطبيق للعمل بشكل صحيح في الخلفية.",
+  "batteryOptimizationMessage": "بالنسبة إلى Android 11 وما فوق ، نحتاج إلى تعطيل تحسين البطارية لهذا التطبيق للعمل بشكل صحيح في الخلفية.",
   "blutter": "أداة بلاتر",
   "blutterDesc": "تحليل بنية كود تطبيقات الفلاتر",
   "blutterNote": "\nAPK: سيتعامل التطبيق مباشرة مع ملفات APK.\n\nZIP: تأكد من أن ملفات ZIP تحتوي فقط على \"libapp.so\" لهيكل arm64. قد يؤدي عدم الامتثال إلى أخطاء.",
@@ -30,6 +48,9 @@
   "continueAsGuest": "الاستمرار كضيف",
   "copiedToClipboard": "نسخ إلى الحافظة",
   "createAccount": "إنشاء حساب",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "المطور",
   "dexRepair": "إصلاح الديكس",
   "dexRepairDesc": "تصحيح بنية ملفات. dex",
@@ -44,6 +65,9 @@
   "enterPassword": "الرجاء إدخال كلمة المرور",
   "enterUsername": "الرجاء إدخال اسم المستخدم",
   "errorDuringAnalysis": "حدث خطأ أثناء التحليل",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "فشل في استخراج الملفات من ZIP: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "الرجاء استخدام تطبيق سطح المكتب أو الجوال لهذه الميزة.",
   "fetchingModelInfo": "جلب معلومات النموذج...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "تحليل تطبيقات الفلاتر",
   "flutterAnalysisDesc": "عرض معلومات ملفات الفلاتر",
   "generate": "توليد",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "لا يمكن للمستخدمين الضيوف استخدام هذه الميزة",
   "iDonTLoveThisApp": "أنا لا أهتم ، سأندم",
   "iLoveThisApp": "أنا آسف، أحب هذا التطبيق",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "تحليل ملفات lib",
   "jniAnalysisDesc": "تحليل هيكل ملفات ال\".so\" داخل التطبيق",
   "language": "لغة التطبيق : {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "نموذج تحذير كبير",
+  "lastUpdate": "Last update",
   "later": "لاحقاً",
+  "launch": "Launch",
   "licenses": "التراخيص",
   "login": "تسجيل الدخول",
   "mail": "البريد",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "دمج",
   "mergeSplitApks": "دمج التطبيق المقسم لملف واحد",
   "mergeUnsupportedOnWeb": "تقسيم دمج APK غير ممكن في إصدار الويب.",
   "models": "المحركات",
+  "more": "More",
   "mtHook": "قتل توقيع MT",
   "mtHookDesc": "حقن كود قتل التوقيع مثل MT",
+  "noAppsFound": "No apps found",
   "noFileSelected": "لم يتم تحديد ملف",
+  "notFound": "Not Found",
   "ok": "نعم",
   "ollama_api_url": "إعداد نقطة إتصال ollama",
   "ollamaInitializeError": "فشل في تهيئة عميل أولاما: {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "فتح مكتبة أولاما",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "يجب أن تتكون كلمة المرور من 8 أحرف على الأقل",
   "passMisMatch": "كلمتا المرور غير متطابقتين",
   "password": "كلمة المرور",
   "pathToApkeditorJar": "المسار إلى جرس المحرر",
   "pleaseConfirmPassword": "الرجاء تأكيد كلمة المرور",
+  "pleaseWait": "Please wait...",
   "preferences": "الإعدادات",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "المتابعة",
   "profile": "حساب تعريفي",
   "register": "تسجيل",
@@ -133,6 +180,7 @@
   "repairing": "إصلاح...",
   "reset": "إعادة ضبط",
   "save": "حفظ",
+  "searchApps": "Search apps...",
   "selectAModel": "أختر محركا كى تبدأ المحادثة",
   "selectFiles": "حدد ملف {type}",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "رسالة النظام",
   "theme": "المظهر",
   "typeMessage": "اكتب رسالتك…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "كنت على وشك إلغاء تثبيت التطبيق أليس كذلك؟",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "حاليا RevEngi يدعم فقط قناة مستقرة\n\nالإصدار الحالي لدارت: {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "يمكن أن يحتوي اسم المستخدم فقط على أحرف وأرقام وتسطير سطر",
   "usernameLimit": "اسم المستخدم يجب أن يكون بين 5 و 15 حرفا",
   "validateModules": "التحقق من إصدار base.apk مع تقسيم APK",
+  "versionCode": "Version code",
   "vrd": "التحقق من اسم لوحة الموارد",
   "welcomeBack": "مرحبا بعودتك!"
 }
