--- a/lib/l10n/app_cs.arb
+++ b/lib/l10n/app_cs.arb
@@ -5,11 +5,29 @@
   "analyzing": "Analyzuji...",
   "apiKey": "API klíč",
   "apiRateLimits": "Limity API koncových bodů",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "APKS do APK",
   "appDescription": "Kolekce reverzních inženýrských nástrojů.",
   "appTitle": "Revengi",
+  "availableIn": "Available in",
   "batteryOptimization": "Optimalizace baterie",
-  "batteryOptimizationMessage": "Pro Android 13 a výše je třeba zakázat optimalizaci baterie, aby tato aplikace fungovala správně na pozadí.",
+  "batteryOptimizationMessage": "Pro Android 11 a výše je třeba zakázat optimalizaci baterie, aby tato aplikace fungovala správně na pozadí.",
   "blutter": "Blutter",
   "blutterDesc": "Binární analytický nástroj Flutter",
   "blutterNote": "\nAPK: Aplikace bude pracovat přímo s APK soubory.\n\r\nZIP: ujistěte se, že ZIP soubory obsahují pouze `libapp. o` pro architekturu arm64. Nesplnění požadavků může mít za následek chyby.",
@@ -30,6 +48,9 @@
   "continueAsGuest": "Pokračovat jako hosta",
   "copiedToClipboard": "Zkopírováno do schránky",
   "createAccount": "Vytvořit účet",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "Vývojář",
   "dexRepair": "Dex oprava",
   "dexRepairDesc": "Opravit soubory DEX",
@@ -44,6 +65,9 @@
   "enterPassword": "Zadejte prosím heslo",
   "enterUsername": "Zadejte prosím uživatelské jméno",
   "errorDuringAnalysis": "Došlo k chybě během analýzy",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Nepodařilo se extrahovat soubory ze ZIP: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "Pro tuto funkci prosím použijte stolní nebo mobilní aplikaci.",
   "fetchingModelInfo": "Načítání informací o modelu...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "Analýza znečišťujících látek",
   "flutterAnalysisDesc": "Analyzovat liby pro znečišťovatel",
   "generate": "Generovat",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "Tato funkce nemůže použít hosté",
   "iDonTLoveThisApp": "Je mi to líto, budu litovat",
   "iLoveThisApp": "Omlouvám se, tuto aplikaci miluji",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "Analýza JNI",
   "jniAnalysisDesc": "Najít podpisy JNI v APK",
   "language": "Jazyk: {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "Varování velkého modelu",
+  "lastUpdate": "Last update",
   "later": "Později",
+  "launch": "Launch",
   "licenses": "Licence",
   "login": "Přihlásit se",
   "mail": "Pošta",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "Sloučit",
   "mergeSplitApks": "Sloučit rozdělené APK",
   "mergeUnsupportedOnWeb": "Sloučení APK není možné rozdělit ve webové verzi.",
   "models": "Vzory",
+  "more": "More",
   "mtHook": "MT háček",
   "mtHookDesc": "Generovat MT vylepšené háčky",
+  "noAppsFound": "No apps found",
   "noFileSelected": "Nebyl vybrán žádný soubor",
+  "notFound": "Not Found",
   "ok": "Ok",
   "ollama_api_url": "Základní URL OLLAMA",
   "ollamaInitializeError": "Nepodařilo se inicializovat Ollama klienta: {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "Otevřít knihovnu Ollama",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "Heslo musí mít alespoň 8 znaků",
   "passMisMatch": "Hesla se neshodují",
   "password": "Heslo",
   "pathToApkeditorJar": "Cesta k apkeditoru",
   "pleaseConfirmPassword": "Potvrďte prosím heslo",
+  "pleaseWait": "Please wait...",
   "preferences": "Předvolby",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Pokračovat",
   "profile": "Profil",
   "register": "Registrovat se",
@@ -133,6 +180,7 @@
   "repairing": "Oprava...",
   "reset": "Reset",
   "save": "Uložit",
+  "searchApps": "Search apps...",
   "selectAModel": "Vyberte model pro chatování",
   "selectFiles": "Vybrat soubor {type}",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "Systémová zpráva",
   "theme": "Téma",
   "typeMessage": "Napište svou zprávu…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "Chystáte se právě odinstalovat aplikaci?",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "Aktuálně RevEngi podporuje pouze stabilní kanál\n\nSoučasná verze grafu: {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "Uživatelské jméno může obsahovat pouze písmena, čísla a podtržítko",
   "usernameLimit": "Uživatelské jméno musí být v rozmezí 5 až 15 znaků",
   "validateModules": "Ověřit verzi base.apk pomocí rozdělených APK",
+  "versionCode": "Version code",
   "vrd": "Ověřit název dir zdrojů",
   "welcomeBack": "Vítejte zpátky!"
 }
