--- a/lib/l10n/app_da.arb
+++ b/lib/l10n/app_da.arb
@@ -5,11 +5,29 @@
   "analyzing": "Analyserer...",
   "apiKey": "API Nøgle",
   "apiRateLimits": "API Endepunkter Rate Grænser",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "APKS til APK",
   "appDescription": "En samling af reverse engineering værktøjer.",
   "appTitle": "RevEngi",
+  "availableIn": "Available in",
   "batteryOptimization": "Batteri Optimering",
-  "batteryOptimizationMessage": "For Android 13 og derover, Vi er nødt til at deaktivere batterioptimering for denne app for at fungere korrekt i baggrunden.",
+  "batteryOptimizationMessage": "For Android 11 og derover, Vi er nødt til at deaktivere batterioptimering for denne app for at fungere korrekt i baggrunden.",
   "blutter": "Blutter",
   "blutterDesc": "Værktøj til binær analyse af flutter",
   "blutterNote": "\nAPK: Appen vil direkte håndtere APK-filer.\n\r\nZIP: Sørg for, at ZIP-filer kun indeholder 'libapp. o` for arm64-arkitektur. Manglende overholdelse kan medføre fejl.",
@@ -30,6 +48,9 @@
   "continueAsGuest": "Fortsæt som gæst",
   "copiedToClipboard": "Kopieret til udklipsholder",
   "createAccount": "Opret Konto",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "Udvikler",
   "dexRepair": "Dex Reparation",
   "dexRepairDesc": "Reparer DEX filer",
@@ -44,6 +65,9 @@
   "enterPassword": "Indtast venligst adgangskode",
   "enterUsername": "Indtast venligst brugernavn",
   "errorDuringAnalysis": "Der opstod en fejl under analyse",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Kunne ikke udpakke filer fra ZIP: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "Brug venligst skrivebordet eller mobilappen til denne funktion.",
   "fetchingModelInfo": "Henter modelinfo...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "Analyse Af Flutter",
   "flutterAnalysisDesc": "Analyser Flutter libs",
   "generate": "Generer",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "Gæstebrugere kan ikke bruge denne funktion",
   "iDonTLoveThisApp": "Jeg er ligeglad med, jeg vil fortryde",
   "iLoveThisApp": "Beklager, jeg elsker denne app",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "JNI Analyse",
   "jniAnalysisDesc": "Find JNI signaturer i APK",
   "language": "Sprog: {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "Stor Model Advarsel",
+  "lastUpdate": "Last update",
   "later": "Senere",
+  "launch": "Launch",
   "licenses": "Licenser",
   "login": "Login",
   "mail": "Mail",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "Flet",
   "mergeSplitApks": "Flet Split APKs",
   "mergeUnsupportedOnWeb": "Split APK sammenlægning er ikke muligt i web-versionen.",
   "models": "Modeller",
+  "more": "More",
   "mtHook": "MT Hook",
   "mtHookDesc": "Generere MT Forbedrede Kroge",
+  "noAppsFound": "No apps found",
   "noFileSelected": "Ingen fil valgt",
+  "notFound": "Not Found",
   "ok": "OK",
   "ollama_api_url": "OLLAMA base URL",
   "ollamaInitializeError": "Kunne ikke initialisere Ollama-klient: {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "Åbn Ollama Bibliotek",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "Adgangskoden skal være på mindst 8 tegn",
   "passMisMatch": "Adgangskoder stemmer ikke overens",
   "password": "Adgangskode",
   "pathToApkeditorJar": "Sti til apkeditor krukke",
   "pleaseConfirmPassword": "Bekræft venligst adgangskode",
+  "pleaseWait": "Please wait...",
   "preferences": "Præferencer",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Fortsæt",
   "profile": "Profil",
   "register": "Registrer",
@@ -133,6 +180,7 @@
   "repairing": "Reparerer...",
   "reset": "Reset",
   "save": "Gem",
+  "searchApps": "Search apps...",
   "selectAModel": "Vælg en model at chatte",
   "selectFiles": "Vælg {type} Fil",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "System Besked",
   "theme": "Tema",
   "typeMessage": "Skriv din besked…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "Du var lige ved at afinstallere app'en var ikke dig?",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "I øjeblikket understøtter RevEngi kun dart stabil kanal\n\nAktuel Dart version: {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "Brugernavn kan kun indeholde bogstaver, tal og understregning",
   "usernameLimit": "Brugernavn skal være mellem 5 og 15 tegn",
   "validateModules": "Validér version af base.apk med delte APK'er",
+  "versionCode": "Version code",
   "vrd": "Validér ressourcens dir navn",
   "welcomeBack": "Velkommen Tilbage!"
 }
