--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -5,11 +5,29 @@
   "analyzing": "Analyse en cours...",
   "apiKey": "Clé API",
   "apiRateLimits": "Limite de débit des points de terminaison de l'API",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "APKS à APK",
   "appDescription": "Une collection d'outils d'ingénierie inversée.",
   "appTitle": "RevEngi",
+  "availableIn": "Available in",
   "batteryOptimization": "Optimisation de la batterie",
-  "batteryOptimizationMessage": "Pour Android 13 et plus, nous devons désactiver l'optimisation de la batterie pour que cette application fonctionne correctement en arrière-plan.",
+  "batteryOptimizationMessage": "Pour Android 11 et plus, nous devons désactiver l'optimisation de la batterie pour que cette application fonctionne correctement en arrière-plan.",
   "blutter": "Blutter",
   "blutterDesc": "Outil d'analyse binaire Flutter",
   "blutterNote": "\nAPK: L'application gérera directement les fichiers APK.\n\nZIP: Assurez-vous que les fichiers ZIP ne contiennent que la « libapp.so » pour l'architecture arm64. Sinon, des erreurs peuvent intervenir.",
@@ -30,6 +48,9 @@
   "continueAsGuest": "Continuer en tant qu'invité",
   "copiedToClipboard": "Copié dans le presse-papiers",
   "createAccount": "Créer un compte",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "Développeur",
   "dexRepair": "Réparation de Dex",
   "dexRepairDesc": "Réparer les fichiers DEX",
@@ -44,6 +65,9 @@
   "enterPassword": "Veuillez entrer le mot de passe",
   "enterUsername": "Veuillez entrer le nom d'utilisateur",
   "errorDuringAnalysis": "Une erreur s'est produite lors de l'analyse",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Impossible d'extraire les fichiers depuis le ZIP: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "Veuillez utiliser l'application de bureau ou mobile pour cette fonctionnalité.",
   "fetchingModelInfo": "Récupération des informations du modèle...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "Analyse de Flutter",
   "flutterAnalysisDesc": "Analyser les libs de Flutter",
   "generate": "Générer",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "Les utilisateurs invités ne peuvent pas utiliser cette fonctionnalité",
   "iDonTLoveThisApp": "« Je m'en fiche, je vais regretter",
   "iLoveThisApp": "Je suis désolé, j'adore cette application",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "Analyse JNI",
   "jniAnalysisDesc": "Trouver les signatures JNI dans l'APK",
   "language": "Langue : {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "Avertissement de grand modèle",
+  "lastUpdate": "Last update",
   "later": "Plus tard",
+  "launch": "Launch",
   "licenses": "Licences",
   "login": "Se connecter",
   "mail": "Courrier",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "Fusionner",
   "mergeSplitApks": "Fusionner les APKs séparés",
   "mergeUnsupportedOnWeb": "La fusion des APKs séparés n'est pas possible dans la version web.",
   "models": "Modèles",
+  "more": "More",
   "mtHook": "Crochet MT",
   "mtHookDesc": "Générer des crochets MT avancée",
+  "noAppsFound": "No apps found",
   "noFileSelected": "Aucun fichier sélectionné",
+  "notFound": "Not Found",
   "ok": "Ok",
   "ollama_api_url": "URL de base OLLAMA",
   "ollamaInitializeError": "Impossible d'initialiser le client Ollama : {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "Ouvrir la bibliothèque Ollama",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "Le mot de passe doit comporter au moins 8 caractères",
   "passMisMatch": "Les mots de passe ne correspondent pas",
   "password": "Mot de passe",
   "pathToApkeditorJar": "Chemin vers le jar apkeditor",
   "pleaseConfirmPassword": "Veuillez confirmer le mot de passe",
+  "pleaseWait": "Please wait...",
   "preferences": "Préférences",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Procéder",
   "profile": "Profil",
   "register": "Inscription",
@@ -133,6 +180,7 @@
   "repairing": "Réparation en cours...",
   "reset": "Réinitialiser",
   "save": "Enregistrer",
+  "searchApps": "Search apps...",
   "selectAModel": "Sélectionnez un modèle pour discuter",
   "selectFiles": "Sélectionner un fichier {type}",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "Message système",
   "theme": "Thème",
   "typeMessage": "Tapez votre message…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "Vous étiez sur le point de désinstaller l'application ?",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "Actuellement, RevEngi ne prend en charge que le canal stable Dart\n\nVersion actuelle de Dart : {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "Le nom d'utilisateur ne peut contenir que des lettres, des chiffres et des tirets bas",
   "usernameLimit": "Le nom d'utilisateur doit contenir entre 5 et 15 caractères",
   "validateModules": "Valider la version de base.apk avec des APKs séparés",
+  "versionCode": "Version code",
   "vrd": "Valider le nom du répertoire des ressources",
   "welcomeBack": "Bienvenue!"
 }
