--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -5,11 +5,29 @@
   "analyzing": "Analizzando...",
   "apiKey": "Chiave API",
   "apiRateLimits": "Limiti Di Tasso Endpoint Api",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "APKS a APK",
   "appDescription": "Una collezione di strumenti di reverse engineering.",
   "appTitle": "RevEngi",
+  "availableIn": "Available in",
   "batteryOptimization": "Ottimizzazione Batteria",
-  "batteryOptimizationMessage": "Per Android 13 e versioni successive, dobbiamo disabilitare l'ottimizzazione della batteria per consentire a questa app di funzionare correttamente in background.",
+  "batteryOptimizationMessage": "Per Android 11 e versioni successive, dobbiamo disabilitare l'ottimizzazione della batteria per consentire a questa app di funzionare correttamente in background.",
   "blutter": "Blutter",
   "blutterDesc": "Strumento di analisi binaria del flutter",
   "blutterNote": "\nAPK: L'applicazione gestirà direttamente i file APK.\n\r\nZIP: Assicurati che i file ZIP contengano solo la `libapp. o` per l'architettura dell'arm64. Il mancato rispetto può causare errori.",
@@ -30,6 +48,9 @@
   "continueAsGuest": "Continua come ospite",
   "copiedToClipboard": "Copiato negli appunti",
   "createAccount": "Crea Account",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "Sviluppatore",
   "dexRepair": "Riparazione Dex",
   "dexRepairDesc": "Ripara file DEX",
@@ -44,6 +65,9 @@
   "enterPassword": "Inserisci la password",
   "enterUsername": "Inserisci il nome utente",
   "errorDuringAnalysis": "Si è verificato un errore durante l'analisi",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Impossibile estrarre i file da ZIP: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "Si prega di utilizzare l'app desktop o mobile per questa funzionalità.",
   "fetchingModelInfo": "Recupero informazioni modello...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "Analisi Flutter",
   "flutterAnalysisDesc": "Analizza libs Flutter",
   "generate": "Genera",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "Gli utenti ospiti non possono utilizzare questa funzione",
   "iDonTLoveThisApp": "Non mi importa, rimpiangerò",
   "iLoveThisApp": "Mi dispiace, amo questa app",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "Analisi JNI",
   "jniAnalysisDesc": "Trova firme JNI nell'APK",
   "language": "Lingua: {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "Avviso Modello Grande",
+  "lastUpdate": "Last update",
   "later": "Dopo",
+  "launch": "Launch",
   "licenses": "Licenze",
   "login": "Accedi",
   "mail": "Posta",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "Unisci",
   "mergeSplitApks": "Unisci APK Divisi",
   "mergeUnsupportedOnWeb": "Dividere l'unione APK non è possibile nella versione web.",
   "models": "Modelli",
+  "more": "More",
   "mtHook": "MT Hook",
   "mtHookDesc": "Genera MT Enhanced Hooks",
+  "noAppsFound": "No apps found",
   "noFileSelected": "Nessun file selezionato",
+  "notFound": "Not Found",
   "ok": "Ok",
   "ollama_api_url": "Url base OLLAMA",
   "ollamaInitializeError": "Impossibile inizializzare il client Ollama: {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "Apri Libreria Ollama",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "La password deve contenere almeno 8 caratteri",
   "passMisMatch": "Le password non corrispondono",
   "password": "Password",
   "pathToApkeditorJar": "Percorso al jar apkeditor",
   "pleaseConfirmPassword": "Conferma la password",
+  "pleaseWait": "Please wait...",
   "preferences": "Preferenze",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Procedere",
   "profile": "Profilo",
   "register": "Registrati",
@@ -133,6 +180,7 @@
   "repairing": "Riparazione...",
   "reset": "Reset",
   "save": "Salva",
+  "searchApps": "Search apps...",
   "selectAModel": "Seleziona un modello da chattare",
   "selectFiles": "Seleziona File {type}",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "Messaggio Di Sistema",
   "theme": "Tema",
   "typeMessage": "Digita il tuo messaggio…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "Stavate giusto per disinstallare l'app non era?",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "Attualmente RevEngi supporta solo il canale dart stabile\n\nVersione Dart corrente: {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "Il nome utente può contenere solo lettere, numeri e underscore",
   "usernameLimit": "Il nome utente deve essere compreso tra 5 e 15 caratteri",
   "validateModules": "Convalida la versione di base.apk con APK divisi",
+  "versionCode": "Version code",
   "vrd": "Convalida nome dir risorse",
   "welcomeBack": "Bentornato!"
 }
