--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -5,11 +5,29 @@
   "analyzing": "分析中...",
   "apiKey": "API キー",
   "apiRateLimits": "APIエンドポイントレート制限",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "APKS to APK",
   "appDescription": "リバースエンジニアリングツールのコレクション。",
   "appTitle": "RevEngi",
+  "availableIn": "Available in",
   "batteryOptimization": "バッテリー最適化",
-  "batteryOptimizationMessage": "Android 13 以降では、バックグラウンドで正常に動作するよう、このアプリのバッテリー最適化を無効にする必要があります。",
+  "batteryOptimizationMessage": "Android 11 以降では、バックグラウンドで正常に動作するよう、このアプリのバッテリー最適化を無効にする必要があります。",
   "blutter": "Blutter",
   "blutterDesc": "Flutter バイナリ解析ツール",
   "blutterNote": "\nAPK: アプリは直接APKファイルを処理します。\n\r\nZIP: ZIPファイルに`libappのみが含まれていることを確認します。 arm64 アーキテクチャ向けの o` 。適合しないとエラーが発生する可能性があります。",
@@ -30,6 +48,9 @@
   "continueAsGuest": "ゲストとして続ける",
   "copiedToClipboard": "クリップボードにコピーしました",
   "createAccount": "アカウントを作成",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "開発者",
   "dexRepair": "デックス修理",
   "dexRepairDesc": "DEXファイルの修復",
@@ -44,6 +65,9 @@
   "enterPassword": "パスワードを入力してください",
   "enterUsername": "ユーザー名を入力してください",
   "errorDuringAnalysis": "分析中にエラーが発生しました",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "ZIPからファイルを抽出できませんでした: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "この機能にはデスクトップまたはモバイルアプリを使用してください。",
   "fetchingModelInfo": "モデル情報を取得しています...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "Flutter Analysis",
   "flutterAnalysisDesc": "Flutter libs を分析する",
   "generate": "生成",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "ゲストユーザーはこの機能を使用できません",
   "iDonTLoveThisApp": "気にしない、後悔する",
   "iLoveThisApp": "申し訳ありませんが、私はこのアプリが大好きです",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "JNI分析",
   "jniAnalysisDesc": "APKでJNI署名を検索",
   "language": "言語: {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "大型モデルの警告",
+  "lastUpdate": "Last update",
   "later": "後で",
+  "launch": "Launch",
   "licenses": "ライセンス",
   "login": "ログイン",
   "mail": "メール",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "結合",
   "mergeSplitApks": "分割APKを統合",
   "mergeUnsupportedOnWeb": "Web版ではスプリットAPKマージはできません。",
   "models": "モデル",
+  "more": "More",
   "mtHook": "MTフック",
   "mtHookDesc": "MT拡張フックを生成",
+  "noAppsFound": "No apps found",
   "noFileSelected": "ファイルが選択されていません",
+  "notFound": "Not Found",
   "ok": "OK",
   "ollama_api_url": "OLLAMAベースURL",
   "ollamaInitializeError": "Orlama クライアントの初期化に失敗しました: {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "Ollama図書館を開く",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "パスワードは8文字以上でなければなりません",
   "passMisMatch": "パスワードが一致しません",
   "password": "パスワード",
   "pathToApkeditorJar": "apkeditor.jarへのパス",
   "pleaseConfirmPassword": "パスワードを確認してください",
+  "pleaseWait": "Please wait...",
   "preferences": "設定",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "続行する",
   "profile": "プロフィール",
   "register": "登録",
@@ -133,6 +180,7 @@
   "repairing": "修理中...",
   "reset": "Reset",
   "save": "保存",
+  "searchApps": "Search apps...",
   "selectAModel": "チャットするモデルを選択",
   "selectFiles": "{type} ファイルを選択",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "システムメッセージ",
   "theme": "テーマ",
   "typeMessage": "Type your message…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "あなたはちょうどアプリをアンインストールしようとしていましたね。",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "Currently RevEngi only supports dart stable channel\n\nCurrent Dart Version: {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "ユーザー名には、文字、数字、およびアンダースコアのみを含めることができます",
   "usernameLimit": "ユーザー名は5文字以上15文字以下で入力してください",
   "validateModules": "base.apkのバージョンを分割APKで検証する",
+  "versionCode": "Version code",
   "vrd": "リソースのディレクトリ名を検証する",
   "welcomeBack": "おかえりなさい！"
 }
