--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -5,11 +5,29 @@
   "analyzing": "Analyserar...",
   "apiKey": "API nyckel",
   "apiRateLimits": "Gränser för API-slutpunkter",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "APKS till APK",
   "appDescription": "En samling av verktyg för omvänd konstruktion.",
   "appTitle": "RevEngi",
+  "availableIn": "Available in",
   "batteryOptimization": "Batterioptimering",
-  "batteryOptimizationMessage": "För Android 13 och ovan, Vi måste inaktivera batterioptimering för att denna app ska fungera korrekt i bakgrunden.",
+  "batteryOptimizationMessage": "För Android 11 och ovan, Vi måste inaktivera batterioptimering för att denna app ska fungera korrekt i bakgrunden.",
   "blutter": "Blutter",
   "blutterDesc": "Flutter binära analysverktyg",
   "blutterNote": "\nAPK: Appen kommer direkt att hantera APK-filer.\n\r\nZIP: Se till att ZIP-filer endast innehåller `libappen. o` för arm64-arkitektur. Underlåtenhet att följa kan resultera i fel.",
@@ -30,6 +48,9 @@
   "continueAsGuest": "Fortsätt som gäst",
   "copiedToClipboard": "Kopierad till urklipp",
   "createAccount": "Skapa konto",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "Utvecklare",
   "dexRepair": "Dex Reparation",
   "dexRepairDesc": "Reparera DEX-filer",
@@ -44,6 +65,9 @@
   "enterPassword": "Ange lösenord",
   "enterUsername": "Ange användarnamn",
   "errorDuringAnalysis": "Ett fel inträffade under analysen",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Det gick inte att extrahera filer från ZIP: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "Använd skrivbordet eller mobilappen för den här funktionen.",
   "fetchingModelInfo": "Hämtar modellinformation...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "Flutter Analys",
   "flutterAnalysisDesc": "Analysera Flutter libs",
   "generate": "Generera",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "Gästanvändare kan inte använda denna funktion",
   "iDonTLoveThisApp": "Jag bryr mig inte, jag ångrar",
   "iLoveThisApp": "Jag är ledsen, jag älskar den här appen",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "JNI Analys",
   "jniAnalysisDesc": "Hitta JNI-signaturer i APK",
   "language": "Språk: {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "Stor modell varning",
+  "lastUpdate": "Last update",
   "later": "Senare",
+  "launch": "Launch",
   "licenses": "Licenser",
   "login": "Inloggning",
   "mail": "E-post",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "Sammanfoga",
   "mergeSplitApks": "Slå ihop delade APK:er",
   "mergeUnsupportedOnWeb": "Delad APK-sammanslagning är inte möjligt i webbversionen.",
   "models": "Modeller",
+  "more": "More",
   "mtHook": "MT krok",
   "mtHookDesc": "Generera MT-förbättrade krokar",
+  "noAppsFound": "No apps found",
   "noFileSelected": "Ingen fil vald",
+  "notFound": "Not Found",
   "ok": "OK",
   "ollama_api_url": "OLLAMA bas-URL",
   "ollamaInitializeError": "Det gick inte att initiera Ollama-klient: {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "Öppna Ollama-biblioteket",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "Lösenordet måste vara minst 8 tecken",
   "passMisMatch": "Lösenorden matchar inte",
   "password": "Lösenord",
   "pathToApkeditorJar": "Sökväg till apkeditor burk",
   "pleaseConfirmPassword": "Bekräfta lösenordet",
+  "pleaseWait": "Please wait...",
   "preferences": "Inställningar",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Fortsätt",
   "profile": "Profil",
   "register": "Registrera",
@@ -133,6 +180,7 @@
   "repairing": "Reparerar...",
   "reset": "Reset",
   "save": "Spara",
+  "searchApps": "Search apps...",
   "selectAModel": "Välj en modell att chatta",
   "selectFiles": "Välj {type} fil",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "System meddelande",
   "theme": "Tema",
   "typeMessage": "Skriv ditt meddelande…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "Du höll just på att avinstallera appen var inte du?",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "För närvarande stöder RevEngi endast dartstabila kanal\n\nNuvarande Dartversion: {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "Användarnamnet kan endast innehålla bokstäver, siffror och understreck",
   "usernameLimit": "Användarnamnet måste vara mellan 5 och 15 tecken",
   "validateModules": "Validera version av base.apk med delade APK:er",
+  "versionCode": "Version code",
   "vrd": "Validera resursnamn",
   "welcomeBack": "Välkommen tillbaka!"
 }
