--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -5,11 +5,29 @@
   "analyzing": "Analiz ediliyor...",
   "apiKey": "API Anahtarı",
   "apiRateLimits": "API Hız Sınırlamaları",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "APKS'i APK'ya dönüştürme",
   "appDescription": "Tersine mühendislik araçlar koleksiyonu",
   "appTitle": "RevEngi",
+  "availableIn": "Available in",
   "batteryOptimization": "Batarya Optimizasyonu",
-  "batteryOptimizationMessage": "Android 13 ve üzeri sürümlerde, bu uygulamanın arka planda düzgün çalışması için pil optimizasyonunu devre dışı bırakmanız gerekiyor.",
+  "batteryOptimizationMessage": "Android 11 ve üzeri sürümlerde, bu uygulamanın arka planda düzgün çalışması için pil optimizasyonunu devre dışı bırakmanız gerekiyor.",
   "blutter": "Blutter",
   "blutterDesc": "Flutter ikili analiz aracı",
   "blutterNote": "\nAPK: APK dosyalarını doğrudan işleyecektir.\n\r\nZIP: dosyalarının yalnızca arm64 mimarisi için `libapp.so` dosyasını içerdiğinden emin olun. Buna uyulmaması hatalara neden olabilir.",
@@ -30,6 +48,9 @@
   "continueAsGuest": "Misafir olarak devam et",
   "copiedToClipboard": "Panoya kopyala",
   "createAccount": "Hesap Oluştur",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "Developer",
   "dexRepair": "Dex Onarımı",
   "dexRepairDesc": "DEX dosyalarını düzelt",
@@ -44,6 +65,9 @@
   "enterPassword": "Lütfen parolayı girin",
   "enterUsername": "Lütfen kullanıcı adını girin",
   "errorDuringAnalysis": "Analiz sırasında bir hata oluştu",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Dosyalar ZIP dosyasından çıkarılamadı: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "Bu özellik için masaüstü ya da mobil uygulamayı kullanın.",
   "fetchingModelInfo": "Model bilgileri alınıyor...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "Flutter Analizi",
   "flutterAnalysisDesc": "Flutter libs analizi",
   "generate": "Oluştur",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "Misafir kullanıcılar bu özelliği kullanamazlar.",
   "iDonTLoveThisApp": "Umurumda değil, pişman olacağım.",
   "iLoveThisApp": "Üzgünüm, bu uygulamayı çok seviyorum.",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "JNI Analizi",
   "jniAnalysisDesc": "APK'da JNI imzalarını bul",
   "language": "Dil: {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "Büyük Model Uyarısı",
+  "lastUpdate": "Last update",
   "later": "Daha sonra",
+  "launch": "Launch",
   "licenses": "Licenses",
   "login": "Giriş",
   "mail": "Mail",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "Birleştir",
   "mergeSplitApks": "APKs dosyalarını birleştir",
   "mergeUnsupportedOnWeb": "Web sürümünde bölünmüş APK birleştirme işlemi yapılamaz.",
   "models": "Modeller",
+  "more": "More",
   "mtHook": "MT Kancası",
   "mtHookDesc": "Güçlendirilmiş MT Kancaları oluştur",
+  "noAppsFound": "No apps found",
   "noFileSelected": "Seçili dosya yok",
+  "notFound": "Not Found",
   "ok": "Ok",
   "ollama_api_url": "OLLAMA temel URL adresi",
   "ollamaInitializeError": "Ollama istemcisi başlatılamadı: {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "Ollama kütüphanesini aç",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "Parola en az 8 karakterden oluşmalıdır.",
   "passMisMatch": "Parola eşleşmiyor",
   "password": "Parola",
   "pathToApkeditorJar": "Apkeditor JAR yolu",
   "pleaseConfirmPassword": "Lütfen parolayı onaylayın",
+  "pleaseWait": "Please wait...",
   "preferences": "Seçenekler",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Devam et",
   "profile": "Profil",
   "register": "Kayıt ol",
@@ -133,6 +180,7 @@
   "repairing": "Düzeltiliyor...",
   "reset": "Sıfırla",
   "save": "Kaydet",
+  "searchApps": "Search apps...",
   "selectAModel": "Sohbet için bir model seç",
   "selectFiles": "{type} Dosyası Seç",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "Sistem Mesajı",
   "theme": "Tema",
   "typeMessage": "Mesajınızı yazın…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "Uygulamayı kaldırmak üzeresin, değil mi?",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "Şu anda RevEngi yalnızca dart kararlı versiyonu destekliyor\n\nMevcut Dart Versiyonu: {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "Kullanıcı adı yalnızca harfler, rakamlar ve alt çizgi içerebilir.",
   "usernameLimit": "Kullanıcı adı 5 ile 15 karakter arasında olmalıdır.",
   "validateModules": "base.apk sürümünü bölünmüş APKs dosyaları ile doğrula",
+  "versionCode": "Version code",
   "vrd": "Kaynaklar dizini adını doğrula",
   "welcomeBack": "Tekrar Hoş geldin!"
 }
