--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -5,11 +5,29 @@
   "analyzing": "Аналізуємо...",
   "apiKey": "API ключ",
   "apiRateLimits": "Ліміт кількості кінцевих точок API",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "APKS до APK",
   "appDescription": "Колекція альтернативних інструментів.",
   "appTitle": "Ревенґі",
+  "availableIn": "Available in",
   "batteryOptimization": "Оптимізація батареї",
-  "batteryOptimizationMessage": "Для Android 13 і вище необхідно вимкнути оптимізацію заряду акумулятора для коректної роботи у фоновому режимі.",
+  "batteryOptimizationMessage": "Для Android 11 і вище необхідно вимкнути оптимізацію заряду акумулятора для коректної роботи у фоновому режимі.",
   "blutter": "Blutter",
   "blutterDesc": "Програма неточного бінарного аналізу",
   "blutterNote": "\nAPK: Додаток буде безпосередньо обробляти APK файли.\n\r\nZIP: Переконайтеся в ZIP-файлах містить тільки `libapp. o` для архітектури 64. Невдача може спричинити помилки.",
@@ -30,6 +48,9 @@
   "continueAsGuest": "Продовжити як гість",
   "copiedToClipboard": "Скопійовано до буферу обміну",
   "createAccount": "Створити обл. запис",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "Розробник",
   "dexRepair": "Відновити",
   "dexRepairDesc": "Відновлення файлів DEX",
@@ -44,6 +65,9 @@
   "enterPassword": "Будь ласка, введіть пароль",
   "enterUsername": "Будь ласка, введіть ім'я користувача",
   "errorDuringAnalysis": "Сталася помилка під час аналізу",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Failed to extract files from ZIP: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "Будь ласка, використовуйте настільний або мобільний додаток для цієї функції.",
   "fetchingModelInfo": "Отримання інформації про модель...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "Пробний аналіз",
   "flutterAnalysisDesc": "Аналізувати очищання",
   "generate": "Генерувати",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "Користувачі не можуть використовувати цю функцію",
   "iDonTLoveThisApp": "Мені байдуже, я пошкодую",
   "iLoveThisApp": "Перепрошую, я люблю цю програму",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "Аналіз JNI",
   "jniAnalysisDesc": "Знайти JNI підписи в APK",
   "language": "Language: {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "Попередження про довгу модель",
+  "lastUpdate": "Last update",
   "later": "Пізніше",
+  "launch": "Launch",
   "licenses": "Ліцензії",
   "login": "Логін",
   "mail": "Пошта",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "Об'єднати",
   "mergeSplitApks": "Об'єднати розділені APK",
   "mergeUnsupportedOnWeb": "Розділення злиття APK неможливе у веб-версії.",
   "models": "Моделі",
+  "more": "More",
   "mtHook": "МТ Хук",
   "mtHookDesc": "Створити MT посилені хуки",
+  "noAppsFound": "No apps found",
   "noFileSelected": "Файл не вибрано",
+  "notFound": "Not Found",
   "ok": "Гаразд",
   "ollama_api_url": "Основний URL OLAMA",
   "ollamaInitializeError": "Не вдалося ініціалізувати клієнт Оллами: {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "Відкрити бібліотеку Оллама",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "Пароль має складатися хоча б з 8 символів",
   "passMisMatch": "Паролі не збігаються",
   "password": "Пароль",
   "pathToApkeditorJar": "Шлях до apkeditor jar",
   "pleaseConfirmPassword": "Будь ласка, підтвердіть пароль",
+  "pleaseWait": "Please wait...",
   "preferences": "Властивості",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Далі",
   "profile": "Анкета",
   "register": "Зареєструватися",
@@ -133,6 +180,7 @@
   "repairing": "Відновлення...",
   "reset": "Reset",
   "save": "Зберегти",
+  "searchApps": "Search apps...",
   "selectAModel": "Виберіть модель для чату",
   "selectFiles": "Виберіть {type} файл",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "Системне повідомлення",
   "theme": "Тема",
   "typeMessage": "Type your message…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "Ви були лише біля деінсталяції, чи не так?",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "В даний час RevEngi тільки підтримує нестабільний канал Dart\n\nПоточна версія Dart {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "Ім'я користувача може містити лише літери, цифри та підкреслення",
   "usernameLimit": "Ім'я користувача повинно бути від 5 до 15 символів",
   "validateModules": "Перевірити версію base.apk з розділом APK",
+  "versionCode": "Version code",
   "vrd": "Перевірити ім'я ресурсів dir",
   "welcomeBack": "З поверненням!"
 }
