--- a/lib/l10n/app_el.arb
+++ b/lib/l10n/app_el.arb
@@ -5,11 +5,29 @@
   "analyzing": "Ανάλυση...",
   "apiKey": "Κλειδί API",
   "apiRateLimits": "Όρια Ρυθμού Τελικών Σημείων Api",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "APKS στο APK",
   "appDescription": "Συλλογή εργαλείων αντίστροφης μηχανικής.",
   "appTitle": "RevEngi",
+  "availableIn": "Available in",
   "batteryOptimization": "Βελτιστοποίηση Μπαταρίας",
-  "batteryOptimizationMessage": "Για Android 13 και παραπάνω, Πρέπει να απενεργοποιήσετε τη βελτιστοποίηση της μπαταρίας για να λειτουργήσει σωστά αυτή η εφαρμογή στο παρασκήνιο.",
+  "batteryOptimizationMessage": "Για Android 11 και παραπάνω, Πρέπει να απενεργοποιήσετε τη βελτιστοποίηση της μπαταρίας για να λειτουργήσει σωστά αυτή η εφαρμογή στο παρασκήνιο.",
   "blutter": "Blutter",
   "blutterDesc": "Εργαλείο ανάλυσης δυαδικών πτερυγίων",
   "blutterNote": "\nAPK: Η εφαρμογή θα χειριστεί απευθείας τα αρχεία APK.\n\r\nZIP: Βεβαιωθείτε ότι τα αρχεία ZIP περιέχουν μόνο το `libapp. o` για την αρχιτεκτονική arm64. Η μη συμμόρφωση μπορεί να οδηγήσει σε σφάλματα.",
@@ -30,6 +48,9 @@
   "continueAsGuest": "Συνέχεια ως επισκέπτης",
   "copiedToClipboard": "Αντιγράφηκε στο πρόχειρο",
   "createAccount": "Δημιουργία Λογαριασμού",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "Προγραμματιστής",
   "dexRepair": "Επισκευή Dex",
   "dexRepairDesc": "Επισκευή αρχείων DEX",
@@ -44,6 +65,9 @@
   "enterPassword": "Παρακαλώ εισάγετε κωδικό πρόσβασης",
   "enterUsername": "Παρακαλώ εισάγετε όνομα χρήστη",
   "errorDuringAnalysis": "Παρουσιάστηκε σφάλμα κατά την ανάλυση",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Αποτυχία εξαγωγής αρχείων από το ZIP: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "Παρακαλώ χρησιμοποιήστε την επιφάνεια εργασίας ή την εφαρμογή για κινητά για αυτή τη δυνατότητα.",
   "fetchingModelInfo": "Λήψη πληροφοριών μοντέλου...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "Ανάλυση Flutter",
   "flutterAnalysisDesc": "Αναλύστε τα χείλη Flutter",
   "generate": "Δημιουργία",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "Οι χρήστες δεν μπορούν να χρησιμοποιήσουν αυτή τη δυνατότητα",
   "iDonTLoveThisApp": "Δεν με νοιάζει, Θα μετανιώσω",
   "iLoveThisApp": "Λυπάμαι, μου αρέσει αυτή η εφαρμογή",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "Ανάλυση JNI",
   "jniAnalysisDesc": "Βρείτε JNI υπογραφές στο APK",
   "language": "Language: {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "Προειδοποίηση Μεγάλου Μοντέλου",
+  "lastUpdate": "Last update",
   "later": "Αργότερα",
+  "launch": "Launch",
   "licenses": "Άδειες",
   "login": "Είσοδος",
   "mail": "Αλληλογραφία",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "Συγχώνευση",
   "mergeSplitApks": "Συγχώνευση Διαχωρισμού Apk",
   "mergeUnsupportedOnWeb": "Ο διαχωρισμός της συγχώνευσης APK δεν είναι δυνατός στην έκδοση web.",
   "models": "Μοντέλα",
+  "more": "More",
   "mtHook": "MT Γάντζος",
   "mtHookDesc": "Δημιουργία MT Ενισχυμένη Αγκίστρια",
+  "noAppsFound": "No apps found",
   "noFileSelected": "Δεν επιλέχθηκε αρχείο",
+  "notFound": "Not Found",
   "ok": "Εντάξει",
   "ollama_api_url": "URL βάσης OLLAMA",
   "ollamaInitializeError": "Failed to initialize Ollama client: {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "Άνοιγμα Της Βιβλιοθήκης Ollama",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "Ο κωδικός πρόσβασης πρέπει να περιέχει τουλάχιστον 8 χαρακτήρες",
   "passMisMatch": "Οι κωδικοί πρόσβασης δεν ταιριάζουν",
   "password": "Κωδικός",
   "pathToApkeditorJar": "Διαδρομή προς το βάζο apkeditor",
   "pleaseConfirmPassword": "Παρακαλώ επιβεβαιώστε τον κωδικό πρόσβασης",
+  "pleaseWait": "Please wait...",
   "preferences": "Ρυθμίσεις",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Συνέχεια",
   "profile": "Προφίλ",
   "register": "Εγγραφή",
@@ -133,6 +180,7 @@
   "repairing": "Επιδιόρθωση...",
   "reset": "Reset",
   "save": "Αποθήκευση",
+  "searchApps": "Search apps...",
   "selectAModel": "Επιλέξτε ένα μοντέλο για συνομιλία",
   "selectFiles": "Επιλογή Αρχείου {type}",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "Μήνυμα Συστήματος",
   "theme": "Θέμα",
   "typeMessage": "Type your message…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "Ήσασταν απλά για να απεγκαταστήσετε την εφαρμογή δεν εσείς?",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "Επί του παρόντος RevEngi υποστηρίζει μόνο dart σταθερό κανάλι\n\nΤρέχουσα Dart Έκδοση: {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "Το όνομα χρήστη μπορεί να περιέχει μόνο γράμματα, αριθμούς και κάτω παύλα",
   "usernameLimit": "Το όνομα χρήστη πρέπει να είναι μεταξύ 5 και 15 χαρακτήρων",
   "validateModules": "Επικύρωση έκδοσης του base.apk με split APKs",
+  "versionCode": "Version code",
   "vrd": "Επικύρωση ονόματος dir πόρων",
   "welcomeBack": "Καλώς Ήρθατε!"
 }
