--- a/lib/l10n/app_no.arb
+++ b/lib/l10n/app_no.arb
@@ -5,11 +5,29 @@
   "analyzing": "Analyserer...",
   "apiKey": "API-nøkkel (Automatic Translation)",
   "apiRateLimits": "API Endepunkter Grense (Automatic Translation)",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "APKS til APK",
   "appDescription": "En samling av omvendt ingeniørverktøy.",
   "appTitle": "RevEngi",
+  "availableIn": "Available in",
   "batteryOptimization": "Batterioptimalisering",
-  "batteryOptimizationMessage": "Vi må deaktivere batterioptimalisering for Android 13 og eldre for at denne appen skal fungere ordentlig i bakgrunnen.",
+  "batteryOptimizationMessage": "Vi må deaktivere batterioptimalisering for Android 11 og eldre for at denne appen skal fungere ordentlig i bakgrunnen.",
   "blutter": "Blutter",
   "blutterDesc": "Verktøy for binær analyse",
   "blutterNote": "\nAPK: Appen vil håndtere APK filer direkte.\n\r\nZIP: Forsikre deg om at ZIP filer bare inneholder `libapp. o` for Anarm64-arkitektur. Manglende overholdelse kan føre til feil.",
@@ -30,6 +48,9 @@
   "continueAsGuest": "Fortsett som gjest",
   "copiedToClipboard": "Kopiert til utklippstavle",
   "createAccount": "Opprett konto",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "Utvikler",
   "dexRepair": "Dex reparasjon",
   "dexRepairDesc": "Reparer DEX filer",
@@ -44,6 +65,9 @@
   "enterPassword": "Vennligst angi passord",
   "enterUsername": "Skriv inn brukernavn",
   "errorDuringAnalysis": "En feil oppstod under analysen",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Kan ikke pakke ut filer fra ZIP: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "Bruk skrivebordet eller mobilappen for denne funksjonen.",
   "fetchingModelInfo": "Henter modellinformasjon...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "Flutter analyse",
   "flutterAnalysisDesc": "Analyser libs",
   "generate": "Generer",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "Gjeste-brukere kan ikke bruke denne funksjonen",
   "iDonTLoveThisApp": "Jeg bryr meg ikke, jeg vil angre",
   "iLoveThisApp": "Beklager, jeg elsker denne appen",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "JNI Analyse",
   "jniAnalysisDesc": "Finn JNI signaturer i APK",
   "language": "Språk: {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "Stor modell advarsel",
+  "lastUpdate": "Last update",
   "later": "Senere",
+  "launch": "Launch",
   "licenses": "Lisenser",
   "login": "Innlogging",
   "mail": "E-post",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "Flett",
   "mergeSplitApks": "Slå sammen delte APKer",
   "mergeUnsupportedOnWeb": "Splitt APK sammenslåing er ikke mulig i nettversjonen.",
   "models": "Modeller",
+  "more": "More",
   "mtHook": "MT Lastkrok",
   "mtHookDesc": "Generer MT Enhanced Hooks",
+  "noAppsFound": "No apps found",
   "noFileSelected": "Ingen fil valgt",
+  "notFound": "Not Found",
   "ok": "OK",
   "ollama_api_url": "OLLAMA grunns-URL",
   "ollamaInitializeError": "Kunne ikke initialisere Ollama-klienten: {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "Åpne Ollama bibliotek",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "Passordet må være minst 8 tegn",
   "passMisMatch": "Passordene samsvarer ikke",
   "password": "Passord",
   "pathToApkeditorJar": "Sti til redigeringsprogram for apkeditor",
   "pleaseConfirmPassword": "Bekreft passord",
+  "pleaseWait": "Please wait...",
   "preferences": "Innstillinger",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Fortsett",
   "profile": "Profil",
   "register": "Registrer",
@@ -133,6 +180,7 @@
   "repairing": "Reparerer...",
   "reset": "Reset",
   "save": "Lagre",
+  "searchApps": "Search apps...",
   "selectAModel": "Velg en modell å chatte",
   "selectFiles": "Velg {type} fil",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "System Melding",
   "theme": "Tema",
   "typeMessage": "Skriv meldingen din…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "Du var i ferd med å avinstallere appen var du ikke?",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "For øyeblikket støtter RevEngi bare den stabile kanalen\n\ngjeldende Dart versjon: {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "Brukernavnet kan bare inneholde bokstaver, tall og understrekingstegn",
   "usernameLimit": "Brukernavnet må være mellom 5 og 15 tegn",
   "validateModules": "Valider versjon av base.apk med splittede APK-er",
+  "versionCode": "Version code",
   "vrd": "Valider ressurs dir navn",
   "welcomeBack": "Velkommen tilbake!"
 }
