--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -5,11 +5,29 @@
   "analyzing": "Analizowanie...",
   "apiKey": "Klucz API",
   "apiRateLimits": "Wartości graniczne punktów końcowych API",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "APKS do APK",
   "appDescription": "Zbiór narzędzi inżynierii odwrotnej.",
   "appTitle": "Odwołanie Engi",
+  "availableIn": "Available in",
   "batteryOptimization": "Optymalizacja baterii",
-  "batteryOptimizationMessage": "W przypadku Android 13 i powyżej musimy wyłączyć optymalizację baterii, aby aplikacja działała poprawnie w tle.",
+  "batteryOptimizationMessage": "W przypadku Android 11 i powyżej musimy wyłączyć optymalizację baterii, aby aplikacja działała poprawnie w tle.",
   "blutter": "Blutter",
   "blutterDesc": "Narzędzie analizy binarnej Flutter",
   "blutterNote": "\nAPK: Aplikacja będzie bezpośrednio obsługiwać pliki APK.\n\r\nZIP: Upewnij się, że pliki ZIP zawierają tylko `libapp. o` dla architektury arm64. Niespełnienie wymagań może spowodować błędy.",
@@ -30,6 +48,9 @@
   "continueAsGuest": "Kontynuuj jako gość",
   "copiedToClipboard": "Skopiowano do schowka",
   "createAccount": "Utwórz konto",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "Programista",
   "dexRepair": "Naprawa dex",
   "dexRepairDesc": "Napraw pliki DEX",
@@ -44,6 +65,9 @@
   "enterPassword": "Wprowadź hasło",
   "enterUsername": "Wprowadź nazwę użytkownika",
   "errorDuringAnalysis": "Wystąpił błąd podczas analizy",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Nie udało się wyodrębnić plików z ZIP: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "Użyj tej funkcji na pulpicie lub aplikacji mobilnej.",
   "fetchingModelInfo": "Pobieranie informacji o modelu...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "Analiza strumienia powietrza",
   "flutterAnalysisDesc": "Analizuj biblioteki Fluttera",
   "generate": "Wygeneruj",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "Użytkownicy gości nie mogą używać tej funkcji",
   "iDonTLoveThisApp": "Nie podoba mi się, żałuję",
   "iLoveThisApp": "Przepraszam, kocham tę aplikację",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "Analiza JNI",
   "jniAnalysisDesc": "Znajdź podpisy JNI w APK",
   "language": "Język: {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "Ostrzeżenie o dużym modelu",
+  "lastUpdate": "Last update",
   "later": "Później",
+  "launch": "Launch",
   "licenses": "Licencje",
   "login": "Logowanie",
   "mail": "Poczta",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "Połącz",
   "mergeSplitApks": "Scalanie podzielonych APK",
   "mergeUnsupportedOnWeb": "Split APK nie jest możliwy w wersji internetowej.",
   "models": "Modele",
+  "more": "More",
   "mtHook": "MT Hook",
   "mtHookDesc": "Generuj zaawansowane hooki MT",
+  "noAppsFound": "No apps found",
   "noFileSelected": "Nie wybrano pliku",
+  "notFound": "Not Found",
   "ok": "Ok",
   "ollama_api_url": "Podstawowy URL OLLAMA",
   "ollamaInitializeError": "Nie udało się zainicjować klienta Ollama: {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "Otwórz bibliotekę Ollama",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "Hasło musi mieć co najmniej 8 znaków",
   "passMisMatch": "Hasła nie pasują",
   "password": "Hasło",
   "pathToApkeditorJar": "Ścieżka do apkeditor jar",
   "pleaseConfirmPassword": "Proszę potwierdzić hasło",
+  "pleaseWait": "Please wait...",
   "preferences": "Ustawienia",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Kontynuuj",
   "profile": "Profil",
   "register": "Rejestracja",
@@ -133,6 +180,7 @@
   "repairing": "Naprawianie...",
   "reset": "Reset",
   "save": "Zapisz",
+  "searchApps": "Search apps...",
   "selectAModel": "Wybierz model do czatu",
   "selectFiles": "Wybierz plik {type}",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "Wiadomość systemowa",
   "theme": "Motyw",
   "typeMessage": "Wpisz swoją wiadomość…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "Masz zamiar odinstalować aplikację nie byłeś?",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "Obecnie RevEngi obsługuje tylko stabilny kanał\n\nBieżąca wersja Dart: {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "Nazwa użytkownika może zawierać tylko litery, cyfry i podkreślenia",
   "usernameLimit": "Nazwa użytkownika musi mieć od 5 do 15 znaków",
   "validateModules": "Zatwierdź wersję base.apk z podzielonymi APK",
+  "versionCode": "Version code",
   "vrd": "Potwierdź nazwę katalogu zasobów",
   "welcomeBack": "Witaj ponownie!"
 }
