--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -5,11 +5,29 @@
   "analyzing": "Analisando...",
   "apiKey": "Chave de API",
   "apiRateLimits": "Taxa de API Endpoints",
+  "apkExtractedMsg": "APK extracted successfully to {outputfile}",
+  "@apkExtractedMsg": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
+  "apkExtractError": "Error extracting APK: {e}",
+  "@apkExtractError": {
+    "placeholders": {
+      "e": {
+        "type": "String"
+      }
+    }
+  },
+  "apkPath": "APK path",
   "apksToApk": "APKS para APK",
   "appDescription": "Uma coleção de ferramentas de engenharia reversa.",
   "appTitle": "RevEngi",
+  "availableIn": "Available in",
   "batteryOptimization": "Otimização de bateria",
-  "batteryOptimizationMessage": "Para o Android 13 e superior, precisamos desativar a otimização de bateria para que esse aplicativo funcione corretamente em segundo plano.",
+  "batteryOptimizationMessage": "Para o Android 11 e superior, precisamos desativar a otimização de bateria para que esse aplicativo funcione corretamente em segundo plano.",
   "blutter": "Blutter",
   "blutterDesc": "Ferramenta de análise binária flamejante",
   "blutterNote": "\nAPK: O aplicativo irá lidar diretamente com arquivos APK.\n\r\nZIP: Certifique-se de que arquivos ZIP contenham apenas o `libapp. o` para arquitetura arm64. Não cumprir pode resultar em erros.",
@@ -30,6 +48,9 @@
   "continueAsGuest": "Continuar como Convidado",
   "copiedToClipboard": "Copiado para o clipboard",
   "createAccount": "Criar conta",
+  "dataDirectory": "Data directory",
+  "dataDirectory2": "Data directory 2",
+  "details": "Details",
   "developer": "Desenvolvedores",
   "dexRepair": "Reparo de Dex",
   "dexRepairDesc": "Reparar arquivos DEX",
@@ -44,6 +65,9 @@
   "enterPassword": "Por favor, digite a senha",
   "enterUsername": "Insira o nome de usuário",
   "errorDuringAnalysis": "Ocorreu um erro durante a análise",
+  "excludeSystemApps": "Exclude System Apps",
+  "extractApk": "Extract APK",
+  "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Falha ao extrair arquivos do ZIP: {e}",
   "@failedToExtractFiles": {
     "placeholders": {
@@ -62,6 +86,10 @@
   },
   "featureNeedsApp": "Por favor, use o aplicativo desktop ou móvel para este recurso.",
   "fetchingModelInfo": "Buscando informações do modelo...",
+  "fileExists": "File Exists",
+  "fileExistsMsg": "File already exists. Do you want to overwrite it?",
+  "fileSize": "File size",
+  "firstInstall": "First install",
   "flutterAnalysis": "Análise de Flauta",
   "flutterAnalysisDesc": "Analisar tampas flamejantes",
   "generate": "Gerar",
@@ -69,6 +97,8 @@
   "guestNotAllowed": "Usuários convidados não podem usar este recurso",
   "iDonTLoveThisApp": "Não me importo, arrepender-me-ei",
   "iLoveThisApp": "Sinto muito, adoro este app",
+  "includeSystemApps": "Include System Apps",
+  "installer": "Installer",
   "jniAnalysis": "Análise JNI",
   "jniAnalysisDesc": "Encontre assinaturas do JNI no APK",
   "language": "Idioma: {languageCode}",
@@ -82,17 +112,30 @@
     }
   },
   "largeModelWarning": "Aviso do Modelo Grande",
+  "lastUpdate": "Last update",
   "later": "Mais tarde",
+  "launch": "Launch",
   "licenses": "Licenças",
   "login": "Conectar-se",
   "mail": "Correio",
+  "manualDeleteRequired": "Kindly manually delete the file/directory at {outputfile} and try again",
+  "@manualDeleteRequired": {
+    "placeholders": {
+      "outputfile": {
+        "type": "String"
+      }
+    }
+  },
   "merge": "Mesclar",
   "mergeSplitApks": "Fundir APKs divididos",
   "mergeUnsupportedOnWeb": "Não é possível a fusão de APK dividida na versão web.",
   "models": "Modelos",
+  "more": "More",
   "mtHook": "MT Hook",
   "mtHookDesc": "Gerar MT Hooks Aprimorados",
+  "noAppsFound": "No apps found",
   "noFileSelected": "Nenhum arquivo selecionado",
+  "notFound": "Not Found",
   "ok": "OK",
   "ollama_api_url": "Base URL OLLAMA",
   "ollamaInitializeError": "Falha ao inicializar cliente Ollama: {e}",
@@ -104,12 +147,16 @@
     }
   },
   "openOllamaLibrary": "Abrir Biblioteca Ollama",
+  "overwrite": "Overwrite",
+  "packageName": "Package name",
   "passLen": "A senha deve ter pelo menos 8 caracteres",
   "passMisMatch": "As senhas não coincidem",
   "password": "Palavra-passe",
   "pathToApkeditorJar": "Caminho para apkeditor jar",
   "pleaseConfirmPassword": "Por favor, confirme a senha",
+  "pleaseWait": "Please wait...",
   "preferences": "Preferências:",
+  "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Continuar",
   "profile": "Perfil",
   "register": "Cadastrar",
@@ -133,6 +180,7 @@
   "repairing": "Reparando...",
   "reset": "Reset",
   "save": "Guardar",
+  "searchApps": "Search apps...",
   "selectAModel": "Selecione um modelo para bater papo",
   "selectFiles": "Selecionar Arquivo {type}",
   "@selectFiles": {
@@ -160,7 +208,9 @@
   "systemMessage": "Sistema de mensagem",
   "theme": "Tema",
   "typeMessage": "Digite sua mensagem…",
+  "uninstall": "Uninstall",
   "uninstallWarning": "Você estava prestes a desinstalar o app não estava?",
+  "unknown": "Unknown",
   "unsupportedDartVersion": "Atualmente RevEngi suporta apenas um canal dart estável\n\nVersão Atual do Dart: {dartversion}",
   "@unsupportedDartVersion": {
     "placeholders": {
@@ -177,6 +227,7 @@
   "usernameCond": "O nome de usuário só pode conter letras, números e sublinhado",
   "usernameLimit": "O nome de usuário deve ter entre 5 e 15 caracteres",
   "validateModules": "Validar a versão de base.apk com APKs divididos",
+  "versionCode": "Version code",
   "vrd": "Validar nome do diretório de recursos",
   "welcomeBack": "Bem-vindo(a) de volta!"
 }
